Final de Projeto

--- a/readme.nd
+++ b/readme.nd
@@ -3,4 +3,9 @@ Tem como objetivo introduzir ao front-end utilizando HTML, CSS e Javascript.
 O modelo de utilização é a estrutura da página da Plataforma de Música Spotify.
 Promovi mudanças no design mas mantendo a estrutura que foi ensinada durante a semana.
 
+Na aula 05, os professores fizeram a introdução ao React. 
+E promoveu o desafio de enviar todos os elementos da página já desenvolvidos para o React. 
+E isso foi feito. 
+Portanto, esse é o último arquivo após o dia 04 quando o script do motor de busca não deu certo. 
+
 Autor: Pedro Macedo. 
